--- a/style.css
+++ b/style.css
@@ -5,7 +5,22 @@
     height: 20px;
     position: fixed;
 }
+.bubble:hover{
+    border: 8px solid violet;
+    background-color: violet;
 
+    transform: translate(-10px, -10px);
+}
+
+.bubble:active{
+    animation-name: color;
+    animation-duration: 4s;
+}
+
+@keyframes color{
+    from {background-color: violet; border: 10px solid violet;}
+    to {background-color: black; border: 10px solid black;}
+}
 
 .container{
     display: flex;
@@ -15,16 +30,73 @@
 
 .add{
     position: absolute;
-    left: 600px;
+    left: 480px;
+
+    border: 2px solid black;
+    background-color: whitesmoke;
+    border-radius: 4px;
+    display: inline-block;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 13px;
+    padding: 4px 8px;
+    text-decoration: white;
+
 }
 
 .remove{
     position: absolute;
-    left: 650px;
+    left: 580px;
+
+    border: 2px solid black;
+    background-color: whitesmoke;
+    border-radius: 4px;
+    display: inline-block;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 13px;
+    padding: 4px 8px;
+    text-decoration: white;
 }
 
 .removeall{
     position: absolute;
-    left: 610px;
-    top: 40px
+    left: 700px;
+
+    border: 2px solid black;
+    background-color: whitesmoke;
+    border-radius: 4px;
+    display: inline-block;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 13px;
+    padding: 4px 8px;
+    text-decoration: white;
+}
+
+.add:hover{
+    background:linear-gradient(to bottom, #46a7f5 5%, #86c6f8 100%); 
+}
+
+.remove:hover{
+    background: linear-gradient(to bottom, #68b465 5%, #abd5aa 100%);
+}
+
+.removeall:hover{
+    background:linear-gradient(to bottom, #eb9b48 5%, #f7d6b3 100%);
+}
+
+.add:active{
+    position: relative;
+    top: 2px;
+}
+
+.remove:active{
+    position: ;
+    top: 2px;
+}
+
+.removeall:active{
+    position: relative;
+    top: 2px;
 }
