--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@
     font-weight: bold;
     font-size: 13px;
     padding: 4px 8px;
-    text-decoration: white;
+    text-decoration: none;
 
 }
 
@@ -56,7 +56,7 @@
     font-weight: bold;
     font-size: 13px;
     padding: 4px 8px;
-    text-decoration: white;
+    text-decoration: none;
 }
 
 .removeall{
@@ -71,7 +71,7 @@
     font-weight: bold;
     font-size: 13px;
     padding: 4px 8px;
-    text-decoration: white;
+    text-decoration: none;
 }
 
 .add:hover{
@@ -79,24 +79,21 @@
 }
 
 .remove:hover{
-    background: linear-gradient(to bottom, #68b465 5%, #abd5aa 100%);
+    background: linear-gradient(to bottom, #eb9b48 5%, #e78721 100%);
 }
 
 .removeall:hover{
-    background:linear-gradient(to bottom, #eb9b48 5%, #f7d6b3 100%);
+    background:linear-gradient(to bottom, #d65509 5%, #c54b05 100%);
 }
 
 .add:active{
-    position: relative;
-    top: 2px;
+    transform: scale(0.9);
 }
 
 .remove:active{
-    position: ;
-    top: 2px;
+    transform: scale(0.9);
 }
 
 .removeall:active{
-    position: relative;
-    top: 2px;
+    transform: scale(0.9);
 }
