Add warning message when there is no bubbles to remove

--- a/style.css
+++ b/style.css
@@ -44,6 +44,14 @@
 
 }
 
+.warning-message{
+    color: red;
+    background-color: rgb(233, 225, 225);
+    position: absolute;
+    left: 530px;
+    top: 50px
+}
+
 .remove{
     position: absolute;
     left: 580px;
